fix panel margin collapse

--- a/static/sass/partials/_panel.sass
+++ b/static/sass/partials/_panel.sass
@@ -13,7 +13,6 @@
 
 .panel
   @extend %panel-base
-  border: 1px
 
 .panel-padding
   @extend %panel-base
@@ -74,9 +73,9 @@ $header-height: 150px
   @extend .panel-bar
   border-bottom: 1px solid #d3d3d3
   line-height: 40px
+  padding-top: 1px
 
 .panel-product-title
-  border: 1px
   padding: 0 1.4em
   margin: 1em 0
   border-left: 2px solid $color-pomegranate
